--- a/client/jobloop.css
+++ b/client/jobloop.css
@@ -40,6 +40,10 @@ h1, h2, h3, h4{
   margin: 0 10px 0 0;
 }
 
+#login-buttons a {
+	text-decoration: none;
+}
+
 .topSpan{
 	padding: 15px;
 	padding-top: 30px;
