--- a/client/jobloop.css
+++ b/client/jobloop.css
@@ -47,6 +47,20 @@ h1, h2, h3, h4{
 	padding:3px;
 }
 
+.calltoAction{
+	clear: both;
+	width: 50%;
+	margin: 30px auto;
+	background-color: rgba(173,210,216,0.4);
+	padding: 30px;
+	border-radius: 8px;
+	line-height: 120%;
+}
+
+.calltoAction h4{
+	font-weight: normal;
+}
+
 td{
 	padding: 15px;
 }
@@ -64,8 +78,8 @@ td{
 }
 
 .topSpan{
-	padding: 15px;
-	padding-top: 30px;
+	padding: 30px 15px;
+	margin: 0;
 }
 
 .topbarBox{
@@ -145,6 +159,8 @@ td{
 	bottom:0;
 	overflow: hidden;
 	clear:both;
+	background-color: #666;
+	color:#f5f5f5;
 }
 
 #header h1{
@@ -163,6 +179,11 @@ td{
 	height:100%;
 	background-color: #fff;
 	box-shadow: 0 0 15px rgba(0,0,0,0.13);
+}
+
+.row-fluid .span12 {
+	width: 100%;
+	margin: 0;
 }
 
 .row-fluid{
