--- a/client/jobloop.css
+++ b/client/jobloop.css
@@ -23,6 +23,10 @@ h1, h2, h3, h4{
 	font-family: "Raleway";
 }
 
+.applicationNotes{
+	padding:20px;
+}
+
 .logos{
 	float: left;
 	font-family: "Raleway"
@@ -135,6 +139,10 @@ td{
 	font-size: 125%;
 }
 
+.companyTab{
+	font-weight: bold;
+}
+
 .sortSelect{
 	float:right;
 }
@@ -214,9 +222,9 @@ td{
 }
 
 .applicationSummary{
-	height:150px;
+	height:275px;
 	overflow: hidden;
-	padding: 10px;
+	padding: 15px;
 	background-color: #f5f5f5;
 	border: 1px solid #ddd;
 	-webkit-border-radius: 4px;
