--- a/client/companytab/company.css
+++ b/client/companytab/company.css
@@ -7,3 +7,14 @@
 .hiddenItem{
   display:none;
 }
+
+.companyContainer{
+	float:left;
+	width:45%;
+	padding:15px;
+	background-color: #fff;
+}
+
+.companyTitle{
+	width:60%;
+}
