--- a/client/jobloop.css
+++ b/client/jobloop.css
@@ -69,6 +69,10 @@ td{
 	padding: 15px;
 }
 
+.icon-plus-sign{
+	display:inline;
+}
+
 .navbar .nav {
   position: relative;
   right: 0;
@@ -136,6 +140,7 @@ td{
 .appHeading{
 	text-align: center;
 	padding-left:0;
+	overflow:hidden;
 }
 
 .appHeading h4{
@@ -197,6 +202,10 @@ td{
 	height:100%;
 	background-color: #fff;
 	box-shadow: 0 0 15px rgba(0,0,0,0.13);
+}
+
+.right{
+	float:right;
 }
 
 .row-fluid .span12 {
